Master: Article list page HTML file header navigation bar content completed 80%.

--- a/staticpage/staticpage.csproj
+++ b/staticpage/staticpage.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\FAQ\Credit\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
