--- a/staticpage/staticpage.csproj
+++ b/staticpage/staticpage.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\FAQ\Credit\" />
     <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\test\sql\" />
   </ItemGroup>
 
 </Project>
