--- a/staticpage/staticpage.csproj
+++ b/staticpage/staticpage.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,7 +7,6 @@
   <ItemGroup>
     <Folder Include="wwwroot\FAQ\Credit\" />
     <Folder Include="wwwroot\Images\" />
-    <Folder Include="wwwroot\test\sql\" />
   </ItemGroup>
 
   <ItemGroup>
