RP: finished the homework of candle and calendar

--- a/nutesttdd/nutesttdd.csproj
+++ b/nutesttdd/nutesttdd.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\cprocess\cprocess.csproj" />
+    <ProjectReference Include="..\staticpage\staticpage.csproj" />
   </ItemGroup>
 
 </Project>
