--- a/cprocess/cprocess.csproj
+++ b/cprocess/cprocess.csproj
@@ -9,4 +9,19 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="dsPerson.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>dsPerson.xsd</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="dsPerson.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dsPerson.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
 </Project>
